# stock-watcher

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  Justfile  LICENSE  README.md  biome.json  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-push.yml  ci.yml
app/: __init__.py  challenges.py  checker.py  config.py  db.py  failures.py  llm.py  llm_client.py  llm_html.py  main.py  models.py  notification_rules.py  ntfy.py  quantity.py  repository.py  rules.py  scheduler.py  schemas.py  screenshots.py  serializers.py  webhook.py  webpush.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.webmanifest  sw.js
frontend/scripts/: generate-pwa-assets.mjs
frontend/src/: App.tsx  api.ts  index.css  main.tsx  theme-tokens.css  types.ts
frontend/src/components/alerts/: AlertMonitorScope.tsx  AlertRuleEditor.tsx  AlertRulesToolbar.tsx  (+8 more)
frontend/src/hooks/: useAlertRules.ts  useDashboardData.ts  useMonitorList.ts  usePushSubscription.ts  useQueryErrorToast.ts
frontend/src/lib/: duration.ts  format.ts  monitor.ts  queries.ts  queryClient.ts
frontend/src/pages/: AlertRules.tsx  Dashboard.tsx  Events.tsx  MonitorEditor.tsx  Monitors.tsx  SettingsPage.tsx
tests/: checker_helpers.py  test_api.py  test_challenges.py  test_checker.py  test_checker_rule.py  test_llm_html_prep.py  test_llm_suggest_rule.py  test_notification_rules.py  test_ntfy.py  test_quantity.py  test_rules.py  test_rules_state_selector.py  test_scheduler.py  test_webhook.py  test_webpush.py
(+110 files in other folders)
