[project]
name = "stock-watcher"
version = "0.1.0"
description = "Docker-friendly stock watcher with a FastAPI web UI and ntfy notifications."
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
  "beautifulsoup4==4.14.3",
  "fastapi==0.136.3",
  "httpx==0.28.1",
  "playwright==1.60.0",
  "python-dotenv==1.2.2",
  "pywebpush>=2.3.0",
  "uvicorn[standard]==0.48.0",
]

[dependency-groups]
dev = [
  "pyright==1.1.409",
  "pytest==9.0.3",
  "pytest-asyncio==1.3.0",
  "respx==0.23.1",
  "ruff==0.15.14",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]

[tool.pyright]
include = ["app", "tests"]
pythonVersion = "3.13"
typeCheckingMode = "basic"
